fix: 修复两处并发风险 — ChatHandler.history 内部 List 线程安全化 + SearchRouter 替换无上限 CachedThreadPool 为固定上限 ThreadPoolExecutor